--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ idna==3.10
 itypes==1.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 requests==2.32.3
 sqlparse==0.5.3
 tzdata==2024.2
